--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "name": "Uploader Bot V2 🚀",
-  "description": "Telegram Bot to Upload URLs to Telegram as File and Video.",
+  "description": "Telegram Uploader Bot V2 🚀 File/Video",
   "logo": "https://te.legra.ph/file/82c925ccc38606d837831.jpg",
   "keywords": [
     "telegram",
